# c-jenkins

./: .env.test  .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  README.md
.cloudbees/workflows/: deploy-manual.yaml  deploy.yaml  full.yaml
cmake/: CompilerFlags.cmake
docs/: dependencies.md
include/: config.h
scripts/: deps.sh
src/: CMakeLists.txt  main.c
src/drivers/: led.c  led.h  sensor.c  sensor.h
src/hal/: gpio.c  gpio.h  uart.c  uart.h
tests/: CMakeLists.txt  test_drivers.c  test_gpio.c  test_led.c  test_sensor.c  test_uart.c
